Added warning to "About inventory installer file" AAP-15722 (#1780)
* added warning about openssl patch contrller doc

* added warning about the deprecation of Satellite support of air-gapped sys

* Update con-inventory-introduction.adoc

Changed warning to note per Jameria's reminder that the use of warning would be inappropriate for the information provided, as it does not cause catastrophic problems for the user.

* Update con-inventory-introduction.adoc

Changed the static name Ansible Automation Platform to the attribute. I tried to do this with all my writing, but I did miss it here.

* Update con-inventory-introduction.adoc

Changed to the version number of Satellite 16.6 to Satellite 6.6.

* Update ref-controller-database-settings.adoc

Changing the warning to a note, because it does not contain catastrophic consequences if not applied.

--- a/downstream/archive/archived-modules/platform/con-inventory-introduction.adoc
+++ b/downstream/archive/archived-modules/platform/con-inventory-introduction.adoc
@@ -63,4 +63,7 @@ The first part of the inventory file specifies the hosts or groups that Ansible 
 
 [NOTE]
 ====
-The inventory file variables `registry_username` and `registry_password` are only required if a non-bundle installer is used.
+You must have valid subscriptions attached before installing the {PlatformNameShort}. If you have a new Red Hat Account, you do not have to perform any additional tasks. By default, Simple Content Access, which hosts access to all your subscriptions and content, is enabled. You can enable Simple Content Access by visiting Red Hat Console. 
+
+The only scenario where you still need to attach a subscription manually is to an air-gapped system that uses Red Hat Satellite for subscription validation. This exception is no longer supported after Red Hat Satellite 6.6.
+====
