--- a/downstream/modules/platform/proc-add-insights-plugin-eda-variable.adoc
+++ b/downstream/modules/platform/proc-add-insights-plugin-eda-variable.adoc
@@ -1,21 +1,15 @@
 
-[id="proc-add-insights-plugin-eda-variable"]
+[id="proc-add-safe-plugin-eda-variable"]
 
-= Displaying port mappings for Red Hat Instights source plugin
+= Adding a safe plugin variable to {EDAcontroller}
 
-When {PlatformNameShort} launches for the first time, the {PlatformNameShort} Subscription screen automatically displays. You can use your Red Hat credentials to retrieve and import your subscription directly into {PlatformNameShort}.
+When using plugins such as redhat.insights_eda or other similar plugins to run rulebook activations in {EDAcontroller}, you must add a safe plugin variable to a directory in {PlatformNameShort}. This would ensure connecton between {EDAcontroller} and the source plugin and display port mappings correctly. 
 
-.Procedures
-. Select *Username / password*.
-. Enter your Red Hat username and password.
-. Select your subscription from the *Subscription* list.
+.Procedure
+//[J. Self] Need to let the customer know where they are in this process (not in platform UI)
+. Create a directory for the safe plugin variable: `mkdir -p ./group_vars/automationedacontroller`
+. Create a file within that directory for your new setting (for example, `touch ./group_vars/automationedacontroller/custom.yml`)
+. Use the following example to add the `automationedacontroller_safe_plugins` to the file along with a comma-separated list of plugins to enable for {EDAcontroller}: 
 +
-[NOTE]
-====
-You can also use your Satellite username and password if your cluster nodes are registered to Satellite through Subscription Manager.
-====
-+
-. The Automation Analytics option is checked by default. These selections help Red Hat improve the product by delivering you a much better user experience. You can opt out by deselecting the options.
-. Review the End User License Agreement and select *I agree to the End User License Agreement*.
-. Click btn:[Finish].
-. After your subscription has been accepted, the license screen displays and navigates you to the Dashboard of the {PlatformNameShort} interface. You can return to the license screen by selecting {MenuSetSubscription} from the navigation panel and clicking btn:[Edit subscription]..
+---
+automationedacontroller_safe_plugins: “ansible.eda.webhook, ansible.eda.alertmanager”
