AAP-25510 Added new safe plugin module to install scenario assbly

--- a/downstream/modules/platform/proc-add-insights-plugin-eda-variable.adoc
+++ b/downstream/modules/platform/proc-add-insights-plugin-eda-variable.adoc
@@ -1,5 +1,5 @@
 
-[id="proc-add-safe-plugin-eda-variable"]
+[id="proc-add-insights-plugin-eda-variable_{context}"]
 
 = Adding a safe plugin variable to {EDAcontroller}
 
