AAP-22022 Added new credential types topic and updated credentials topic

--- a/downstream/assemblies/eda/assembly-eda-credential-types.adoc
+++ b/downstream/assemblies/eda/assembly-eda-credential-types.adoc
@@ -1,6 +1,6 @@
 [id="eda-credentials"]
 
-= Setting up credentials
+= Setting up credentials for {EDAcontroller}
 
 You can use credentials and credential types to define and store secrets that can be used for authentication purposes with resources, such as decision environments, rulebook activations and projects for {EDAcontroller}, and inventories and projects for {ControllerName}.
 
