--- a/downstream/assemblies/eda/assembly-eda-credential-types.adoc
+++ b/downstream/assemblies/eda/assembly-eda-credential-types.adoc
@@ -1,8 +1,8 @@
 [id="eda-credentials"]
 
-= Setting up credentials for {EDAcontroller}
+= Customizing credential types
 
-You can use credentials and credential types to define and store secrets that can be used for authentication purposes with resources, such as decision environments, rulebook activations and projects for {EDAcontroller}, and inventories and projects for {ControllerName}.
+{EDAcontroller}, and inventories and projects for {ControllerName}.
 
 As a system administrator, you can define a custom credential type for each credential you create in a standard format by using a YAML or JSON-like definition.
 
