--- a/downstream/titles/eda/eda-user-guide/master.adoc
+++ b/downstream/titles/eda/eda-user-guide/master.adoc
@@ -14,7 +14,7 @@ Developed by Red Hat, this feature is designed for simplicity and flexibility.
 include::{Boilerplate}[]
 include::eda/assembly-eda-user-guide-overview.adoc[leveloffset=+1]
 include::eda/assembly-eda-credentials.adoc[leveloffset=+1]
-inclue::eda/assembly-eda-credential-types.adoc[leveloffset=+1]
+include::eda/assembly-eda-credential-types.adoc[leveloffset=+1]
 
 include::eda/assembly-eda-projects.adoc[leveloffset=+1]
 include::eda/assembly-eda-decision-environments.adoc[leveloffset=+1]
