--- a/downstream/assemblies/eda/assembly-eda-logging-strategy.adoc
+++ b/downstream/assemblies/eda/assembly-eda-logging-strategy.adoc
@@ -3,7 +3,7 @@
 = {EDAName} logging strategy
 
 {EDAName} offers an audit logging solution over its resources. 
-We log each supported create, read, update, and delete (CRUD) operation done against rulebook activations, event streams, decision environments, projects, and activations. 
+Each supported create, read, update and delete (CRUD) operation is logged against rulebook activations, event streams, decision environments, projects, and activations. 
 Some of these resources support further operations, such as sync, enable, disable, restart, start, and stop; for these operations, logging is supported as well. 
 These logs are only retained for the lifecycle of its associated container. 
 See the following sample logs for each supported logging operation.
