--- a/lightspeed/modules/proc_start-lightspeed-trial.adoc
+++ b/lightspeed/modules/proc_start-lightspeed-trial.adoc
@@ -4,14 +4,21 @@
 
 .Prerequisites
 * You must have a trial or paid subscription to the {PlatformName}.
-* You must have installed the Ansible VS Code extension. For the steps, see the xref:install-vscode-extension_configuring-with-code-assistant[Installing the Ansible VS Code extension].
+* You must have installed the Ansible VS Code extension. For the steps, see xref:install-vscode-extension_configuring-with-code-assistant[Installing the Ansible VS Code extension].
+* You must have configured the Ansible VS Code extension to enable {LightspeedShortName}. For the steps, see xref:configure-vscode-extension_configuring-with-code-assistant[Configuring the Ansible VS Code extension].
 
 .Procedure
 . Open the VS Code application.
 . From the VS Code activity bar, click the *Ansible* icon to open the left panel.
+. Ensure that you have configured the Ansible VS Code extension to enable {LightspeedShortName}. For the steps, see xref:configure-vscode-extension_configuring-with-code-assistant[Configuring the Ansible VS Code extension].
+. In the *Ansible Lightspeed* view, click *Connect*.
+. Enter your Red Hat account username and password. 
 . In the Ansible Lightspeed view, click *Start trial*. The link:https://c.ai.ansible.redhat.com/[Ansible Lightspeed portal login page] opens. 
-. On the Ansible Lightspeed Portal, select the checkboxes to accept the IBM terms and conditions, and be notified about the products, services, and events. 
+. On the Ansible Lightspeed Portal, select the checkbox to accept the IBM terms and conditions before proceeding. 
++
+You can also select to receive notifications about Red Hat products, services, and events. You can unsubscribe anytime if you no longer wish to receive the marketing emails. 
+
 . Click *Start trial*. Your {LightspeedShortName} trial has started.
-. View the details of your trial account:
+. View the time remaining on your trial account:
 .. From the VS Code activity bar, click the *Ansible* icon.
 .. In the *Ansible Lightspeed* view, verify that you are logged in using your trial account and view the expiration date of your trial account. 
