AAP-28751 -  Update Hub menu attributes for UI Parity work

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -217,22 +217,22 @@
 
 // Automation Content (aka automation hub menu selections)
 // In 2.5EA the Automation Content selection will open a hub ui instance in a new tab/browser so the menu definitions will not change until 2.5-next
-:MenuACNamespaces: menu:Collections[Namespaces]
-:MenuACCollections: menu:Collections[Collections]
-:MenuACExecEnvironments: menu:Execution Environments[Execution Environments]
+:MenuACNamespaces: menu:{MenuTopAC}[Namespaces]
+:MenuACCollections: menu:{MenuTopAC}[Collections]
+:MenuACExecEnvironments: menu:{MenuTopAC}[Execution Environments]
 
 // Automation Content > Administration
-:MenuACAdminSignatureKeys: menu:Signature Keys[]
-:MenuACAdminRepositories: menu:Collections[Repositories]
-:MenuACAdminRemoteRegistries: menu:Execution Environments[Remote Registries]
-:MenuACAdminTasks: menu:Task Management[]
-:MenuACAdminCollectionApproval: menu:Collections[Approval]
-:MenuACAdminRemotes: menu:Collections[Remotes]
+:MenuACAdminSignatureKeys: menu:MenuTopAC[Signature Keys]
+:MenuACAdminRepositories: menu:MenuTopAC[Repositories]
+:MenuACAdminRemoteRegistries: menu:{MenuTopAC}[Remote Registries]
+:MenuACAdminTasks: menu:{MenuTopAC}[Task Management]
+:MenuACAdminCollectionApproval: menu:{MenuTopAC}[Collection Approvals]
+:MenuACAdminRemotes: menu:{MenuTopAC}[Remotes]
 :MenuACAPIToken: menu:Collections[API token]
 //Each of the services previously had selections for access which will be centralized, ultimately these should be changed to use the attributes in Access Management menu selections once automation hub is provide in the full ui platform experience in 2.5-next
-:MenuHubUsers: menu:User Access[Users]
+:MenuHubUsers: menu:{MenuAM}[Users]
 :MenuHubGroups: menu:User Access[Groups]
-:MenuHubRoles: menu:User Access[Roles]
+:MenuHubRoles: menu:{MenuAM}[Roles]
 
 // Automation Analytics menu selections - According to mockups, analytics will be included in the Gateway nav only includes Automation Calculator, Host Metrics and Subscription Usage, other settings are also included on the Ansible dashboard on the Hybrid Cloud Console https://console.redhat.com/ansible/ansible-dashboard
 :MenuAAReports: menu:{MenuAA}[Reports]
