AAP-29213 - incorporating peer review feedback

--- a/downstream/modules/platform/proc-controller-github-enterprise-team-settings.adoc
+++ b/downstream/modules/platform/proc-controller-github-enterprise-team-settings.adoc
@@ -16,7 +16,8 @@ The OAuth2key (Client ID) and secret (Client Secret) are used to supply the requ
 .Procedure
 
 . From the navigation panel, select {MenuAMAuthentication}.
-. Select *GitHub enterprise team* from the *Authentication type* list.
+. Click btn:[Create authentication].
+. Select *GitHub enterprise team* from the *Authentication type* list and click btn:[Next].
 . Enter a *Name* for this authentication configuration.
 . When the application is registered, GitHub displays the *Client ID* and *Client Secret*:
 +
