--- a/downstream/modules/platform/proc-controller-github-organization-setttings.adoc
+++ b/downstream/modules/platform/proc-controller-github-organization-setttings.adoc
@@ -4,7 +4,7 @@
 
 When defining account authentication with either an organization or a team within an organization, you should use the specific organization and team settings. Account authentication can be limited by an organization and by a team within an organization.
 You can also choose to permit all by specifying non-organization or non-team based settings.
-You can limit users who can login to the platform by limiting only those in an organization or on a team within an organization.
+You can limit users who can log in to the platform by limiting only those in an organization or on a team within an organization.
 
 To set up social authentication for a GitHub organization, you must obtain an OAuth2 key and secret for a web application using the link:https://docs.github.com/en/apps/using-github-apps/installing-your-own-github-app[registering the new application with GitHub].
 
@@ -12,7 +12,8 @@ The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the req
 
 .Procedure
 . From the navigation panel, select {MenuAMAuthentication}.
-. Select *GitHub organization* from the *Authentication type* list.
+. Click btn:[Create authentication].
+. Select *GitHub organization* from the *Authentication type* list and click btn:[Next].
 . Enter a *Name* for this authentication configuration.
 . When the application is registered, GitHub displays the *Client ID* and *Client Secret*:
 +
