--- a/downstream/modules/platform/proc-controller-github-settings.adoc
+++ b/downstream/modules/platform/proc-controller-github-settings.adoc
@@ -9,7 +9,8 @@ The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the req
 .Procedure
 
 . From the navigation panel, select {MenuAMAuthentication}.
-. Select *GitHub* from the *Authentication type* list.
+. Click btn:[Create authentication].
+. Select *GitHub* from the *Authentication type* list and click btn:[Next].
 . Enter a *Name* for this authentication configuration.
 . When the application is registered, GitHub displays the *Client ID* and *Client Secret*:
 +
