--- a/downstream/modules/platform/proc-controller-google-oauth2-settings.adoc
+++ b/downstream/modules/platform/proc-controller-google-oauth2-settings.adoc
@@ -12,7 +12,7 @@ If you have already completed the setup process, you can access those credential
 
 . From the navigation panel, select {MenuAMAuthentication}.
 . Click btn:[Create authentication].
-. Select *Google OAuth* from the *Authentication type* list.
+. Select *Google OAuth* from the *Authentication type* list and click btn:[Next].
 . Enter a *Name* for this authentication setting.
 . The *Google OAuth2 Key* and *Google OAuth2 Secret* fields are pre-populated. 
 +
