--- a/downstream/modules/platform/proc-controller-set-up-LDAP.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-LDAP.adoc
@@ -14,8 +14,7 @@ Users created through an LDAP login should not change their username, first name
 
 . From the navigation panel, select {MenuAMAuthentication}.
 . Click btn:[Create authentication].
-. Select *LDAP* from the *Authentication type* list.
-. Click btn:[Next]. 
+. Select *LDAP* from the *Authentication type* list and click btn:[Next].
 . Enter a *Name* for this LDAP configuration. The configuration name is required, must be unique across all authenticators, and must not be longer than 512 characters.
 . In the *LDAP Server URI* field, enter or modify the list of LDAP servers to which you want to connect. This field supports multiple addresses.
 . In the *LDAP Bind DN text* field, enter the Distinguished Name (DN) to specify the user that the Ansible Automation Platform uses to connect to the LDAP server. For example:
