--- a/downstream/modules/platform/proc-controller-set-up-SAML.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-SAML.adoc
@@ -9,8 +9,7 @@ SAML allows the exchange of authentication and authorization data between an Ide
 
 . From the navigation panel, select {MenuAMAuthentication}.
 . Click btn:[Create authentication].
-. Select *SAML* from the *Authentication type* list.
-. Click btn:[Next].
+. Select *SAML* from the *Authentication type* list and click btn:[Next].
 . Enter a *Name* for this SAML configuration. 
 . Enter the application-defined unique identifier used as the audience of the SAML service provider configuration in the *SAML Service Provider Entity ID* field. This is usually the URL for the service.
 . Include the certificate content in the *SAML Service Provider Public Certificate* field.
