--- a/downstream/modules/platform/proc-controller-set-up-azure.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-azure.adoc
@@ -9,7 +9,8 @@ Each key and secret must belong to a unique application and cannot be shared or 
 .Procedure
 
 . From the navigation panel, select {MenuAMAuthentication}.
-. Select *Azuread* from the *Authentication type* list.
+. Click btn:[Create authentication].
+. Select *Azuread* from the *Authentication type* list and click btn:[Next].
 . Enter a *Name* for this authentication configuration.
 . Click btn:[Edit], copy and paste Microsoft’s *Application (Client) ID* to the *OIDC Key* field.
 + 
