--- a/downstream/modules/platform/proc-controller-set-up-radius.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-radius.adoc
@@ -7,7 +7,8 @@ You can configure {PlatformNameShort} to centrally use RADIUS as a source for au
 .Procedure
 
 . From the navigation panel, select {MenuAMAuthentication}.
-. Select *Radius* from the *Authentication type* list.
+. Click btn:[Create authentication].
+. Select *Radius* from the *Authentication type* list and click btn:[Next].
 . Click btn:[Create authentication].
 . Enter the host or IP of the RADIUS server in the *RADIUS Server* field. If you leave this field blank, RADIUS authentication is disabled.
 . Enter the *Shared secret for authenticating to RADIUS server*.
