--- a/downstream/modules/platform/proc-controller-set-up-tacacs+.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-tacacs+.adoc
@@ -13,8 +13,7 @@ This feature is deprecated and will be removed in a future release.
 
 . From the navigation panel, select {MenuAMAuthentication}.
 . Click btn:[Create authentication].
-. Select *TACACS+* from the *Authentication type* list.
-. Click btn:[Next].
+. Select *TACACS+* from the *Authentication type* list and click btn:[Next].
 . Enter a *Name* for this TACACS+ configuration.
 . Enter the following information:
 +
