--- a/downstream/modules/platform/proc-controller-github-enterprise-org-settings.adoc
+++ b/downstream/modules/platform/proc-controller-github-enterprise-org-settings.adoc
@@ -12,7 +12,8 @@ Each key and secret must belong to a unique application and cannot be shared or 
 
 .Procedure
 . From the navigation panel, select {MenuAMAuthentication}.
-. Select *GitHub enterprise organization* from the *Authentication type* list.
+. Click btn:[Create authentication].
+. Select *GitHub enterprise organization* from the *Authentication type* list and click btn:[Next].
 . Enter a *Name* for this authentication configuration.
 . When the application is registered, GitHub displays the *Client ID* and *Client Secret*:
 +
