--- a/downstream/modules/platform/proc-controller-set-up-generic-oidc.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-generic-oidc.adoc
@@ -8,7 +8,7 @@ OpenID Connect (OIDC) uses the OAuth 2.0 framework. It enables third-party appli
 
 . From the navigation panel, select {MenuAMAuthentication}.
 . Click btn:[Create authentication].
-. Select *Generic OIDC* from the *Authentication type* list.
+. Select *Generic OIDC* from the *Authentication type* list and click btn:[Next].
 . Enter a *Name* for this authentication configuration.
 . Enter the following information:
 +
