--- a/downstream/modules/platform/proc-gw-config-keycloak-settings.adoc
+++ b/downstream/modules/platform/proc-gw-config-keycloak-settings.adoc
@@ -10,8 +10,7 @@ You can configure {PlatformNameShort} to integrate Keycloak to manage user authe
 
 . From the navigation panel, select {MenuAMAuthentication}.
 . Click btn:[Create authentication].
-. Select *Keycloak* from the *Authentication type* list.
-. Click btn:[Next]. 
+. Select *Keycloak* from the *Authentication type* list and click btn:[Next].
 . Enter a *Name* for this keycloak configuration. The configuration name is required, must be unique across all authenticators, and must not be longer than 512 characters. 
 . Enter the location where the user's token can be retrieved in the *Keycloak Access Token URL* field.
 . Optional: Enter the redirect location the user is taken to during the login flow in the *Keycloak Provider URL* field. 
