--- a/downstream/modules/platform/proc-gw-local-authentication.adoc
+++ b/downstream/modules/platform/proc-gw-local-authentication.adoc
@@ -15,8 +15,7 @@ A local authenticator is automatically created by the {PlatformNameShort} instal
 
 . From the navigation panel, select {MenuAMAuthentication}.
 . Click btn:[Create authentication].
-. Select *Local* from the *Authentication type* list.
-. Click btn:[Next]. 
+. Select *Local* from the *Authentication type* list and click btn:[Next]. 
 . Enter a *Name* for this Local configuration. The configuration name is required, must be unique across all authenticators, and must not be longer than 512 characters. 
 +
 include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
