Adding new content for 2.5 to rulebook act. chapter
Update the Rulebook activations chapter

https://issues.redhat.com/browse/AAP-29949

Affects `titles/eda/eda-user-guide`

--- a/downstream/modules/eda/proc-eda-restart-rulebook-activations.adoc
+++ b/downstream/modules/eda/proc-eda-restart-rulebook-activations.adoc
@@ -9,5 +9,5 @@ You can only restart a rulebook activation if it is currently enabled and the re
 
 . Select the btn:[More Actions] icon *{MoreActionsIcon}* next to *Rulebook Activation enabled/disabled* toggle.
 . Select btn:[Restart rulebook activation].
-. In the popup window, select btn:[Yes, I confirm that I want to restart these X rulebook activations].
+. In the window, select btn:[Yes, I confirm that I want to restart these X rulebook activations].
 . Select btn:[Restart rulebook activations].
