--- a/downstream/modules/eda/proc-eda-view-activation-output.adoc
+++ b/downstream/modules/eda/proc-eda-view-activation-output.adoc
@@ -7,7 +7,7 @@ You can view the output of the activations in the *History* tab.
 .Procedure
 . Select the *History* tab to access the list of all the activation instances.
 An activation instance represents a single execution of the activation.
-. Then select the activation instance in question, this will show you the *Output* produced by that specific execution.
+. Then select the activation instance in question, this shows you the *Output* produced by that specific execution.
 
 //Replace this screenshot with current view
 image::eda-rulebook-activation-history.png[Rulebook activation history]
