--- a/downstream/modules/platform/proc-controller-github-enterprise-team-settings.adoc
+++ b/downstream/modules/platform/proc-controller-github-enterprise-team-settings.adoc
@@ -1,41 +1,41 @@
 [id="proc-controller-github-enterprise-team-settings"]
 
-= GitHub Enterprise Team settings
+= Configuring GitHub enterprise team authentication
 
-To set up social authentication for a GitHub Enterprise team, you must obtain a GitHub Enterprise Organization URL, an Organization API URL, an Organization OAuth2 key and secret for a web application.
+To set up social authentication for a GitHub enterprise team, you must obtain a GitHub Enterprise Organization URL, an Organization API URL, an Organization OAuth2 key and secret for a web application.
 
-To obtain the URLs, refer to the GitHub documentation on link:https://docs.github.com/en/enterprise-server@3.1/rest/reference/enterprise-admin[GitHub Enterprise administration].
+To obtain the URLs, refer to the link:https://docs.github.com/en/enterprise-server@3.1/rest/reference/enterprise-admin[GitHub Enterprise administration documentation].
 
-To obtain the key and secret, you must first register your enterprise team-owned application at `https://github.com/organizations/<yourorg>/settings/applications`.
+To obtain the key and secret, you must first register your enterprise organization-owned application at `https://github.com/organizations/<yourorg>/settings/applications`.
 
-To register the application, you must supply it with your Authorization callback URL, which is the *Callback URL* shown in the *Details* page.
-Because it is hosted on site and not github.com, you must specify which authentication adapter it communicates with.
+The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI. To register the application, you must supply it with your webpage URL, which is the *Callback URL* shown in the Authenticator details for your authenticator configuration. See xref:gw-display-auth-details[Displaying authenticator details] for instructions on accessing this information.
 
 Each key and secret must belong to a unique application and cannot be shared or reused between different authentication  backends.
 The OAuth2key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI.
 
 .Procedure
-. Find the numeric team ID using the link:https://fabian-kostadinov.github.io/2015/01/16/how-to-find-a-github-team-id/[GitHub API].
-The Team ID will be used to supply a required field in the UI.
-. From the navigation panel, select {MenuAEAdminSettings}.
-. On the *Settings* page, select *GitHub settings* from the list of *Authentication* options.
-. Click the *GitHub Enterprise Team* tab.
+
+. From the navigation panel, select {MenuAMAuthentication}.
+. Click btn:[Create authentication].
+. Select *GitHub enterprise team* from the *Authentication type* list and click btn:[Next].
+. Enter a *Name* for this authentication configuration.
+. When the application is registered, GitHub displays the *Client ID* and *Client Secret*:
 +
-The *GitHub Enterprise Team OAuth2 Callback URL* field is already pre-populated and non-editable.
-When the application is registered, GitHub displays the Client ID and Client Secret.
+.. Copy and paste the GitHub Client ID into the GitHub OAuth2 Key field. 
+.. Copy and paste the GitHub Client Secret into the GitHub OAuth2 Secret field. 
++
+. In the *Base URL* field, enter the hostname of the GitHub Enterprise instance, for example, `https://github.orgexample.com`.
+. In the *Github OAuth2 Enterprise API URL* field, enter the API URL of the GitHub Enterprise instance, for example, `https://github.example.com/api/v3`.
+. Enter the OAuth2 key (Client ID) from your GitHub developer application in the *GitHub OAuth2* team ID field.
++
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
+. Click btn:[Next].
 
-. Click btn:[Edit] to configure GitHub Enterprise Team settings.
-. In the *GitHub Enterprise Team URL* field, enter the hostname of the GitHub Enterprise team instance, for example, https://github.teamexample.com.
-. In the *GitHub Enterprise Team API URL* field, enter the API URL of the GitHub Enterprise team instance, for example,
-https://github.teamexample.com/api/v3.
-. Copy and paste GitHub's Client ID into the *GitHub Enterprise Team OAuth2 Key* field.
-. Copy and paste GitHub's Client Secret into the *GitHub Enterprise Team OAuth2 Secret* field.
-. Copy and paste GitHub's team ID in the *GitHub Enterprise Team ID* field.
-. For more information on completing the mapping fields, see xref:ref-controller-organization-mapping[Organization mapping] and xref:ref-controller-team-mapping[Team mapping].
-. Click btn:[Save].
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-authentication-next-steps.adoc[]
 
-.Verification
-To verify that the authentication was configured correctly, logout of {ControllerName}.
-The login screen displays the GitHub Enterprise Teams logo to enable logging in with those credentials.
-
-image:configure-controller-auth-github-ent-teams-logo.png[image]
+include::snippets/snip-gw-authentication-verification.adoc[]
