--- a/downstream/modules/platform/proc-controller-set-up-azure.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-azure.adoc
@@ -1,35 +1,35 @@
 [id="controller-set-up-azure"]
 
-= {Azure} active directory authentication
+= Configuring {Azure} active directory authentication
 
-To set up enterprise authentication for {Azure} Active Directory (AD), you need to obtain an OAuth2 key and secret by registering your organization-owned application from Azure at:
-https://docs.microsoft.com/en-us/azure/active-directory/develop/quickstart-register-app.
+To set up enterprise authentication for {Azure} Active Directory (AD), you need to obtain an OAuth2 key and secret by registering your organization-owned application from Azure using the link:https://docs.microsoft.com/en-us/azure/active-directory/develop/quickstart-register-app[Quickstart: Register an application with the Microsoft identity platform]. 
 
-Each key and secret must belong to a unique application and cannot be shared or reused between different authentication backends.
-To register the application, you must supply it with your webpage URL, which is the Callback URL shown in the *Authentication* tab of the *Settings* screen.
+Each key and secret must belong to a unique application and cannot be shared or reused between different authentication backends. To register the application, you must supply it with your webpage URL, which is the Callback URL shown in the Authenticator details for your authenticator configuration. See dxref:gw-display-auth-details[Displaying authenticator details] for instructions on accessing this information.  
 
 .Procedure
 
-. From the navigation panel, select {MenuAEAdminSettings}.
-. Select *Azure AD settings* from the list of *Authentication* options.
+. From the navigation panel, select {MenuAMAuthentication}.
+. Click btn:[Create authentication].
+. Select *Azuread* from the *Authentication type* list and click btn:[Next].
+. Enter a *Name* for this authentication configuration.
+. Click btn:[Edit], copy and paste Microsoft’s *Application (Client) ID* to the *OIDC Key* field.
++ 
+Following instructions for link:https://docs.microsoft.com/en-us/azure/active-directory/develop/quickstart-register-app[registering your application with the Microsoft identity platform], supply the key (shown at one time only) to the client for authentication. 
 +
-[NOTE]
-====
-The *Azure AD OAuth2 Callback URL* field is already pre-populated and non-editable.
-Once the application is registered, {Azure} displays the Application ID and Object ID.
-====
-. Click btn:[Edit], copy and paste {Azure}'s Application ID to the *Azure AD OAuth2 Key* field.
+. Copy and paste the secret key created for your Microsoft Azure AD application to the OIDC Secret field.
 +
-Following {Azure} AD's documentation for connecting your application to {Azure} Active Directory, supply the key (shown at one time only) to the client for authentication.
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
 +
-. Copy and paste the secret key created for your {Azure} AD application to the *Azure AD OAuth2 Secret* field of the *Settings - Authentication* screen.
-. For more information on completing the {Azure} AD OAuth2 Organization Map and {Azure} AD OAuth2 Team Map fields, see xref:ref-controller-organization-mapping[Organization mapping] and xref:ref-controller-team-mapping[Team Mapping].
-. Click btn:[Save].
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
+Click btn:[Next].
 
-.Verification
-To verify that the authentication is configured correctly, log out of {ControllerName} and the login screen displays the {Azure} logo to enable logging in with those credentials:
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-authentication-next-steps.adoc[]
 
-image::ag-configure-auth-azure-logo.png[Azure AD logo]
+include::snippets/snip-gw-authentication-verification.adoc[]
 
+[role="_additional-resources"]
 .Additional resources
 For application registering basics in {Azure} AD, see the link:https://learn.microsoft.com/en-us/entra/identity-platform/v2-overview[What is the Microsoft identity platform?] overview.
