--- a/downstream/modules/platform/proc-controller-set-up-generic-oidc.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-generic-oidc.adoc
@@ -1,34 +1,49 @@
 [id="controller-set-up-generic-oidc"]
 
-= Generic OIDC authentication
+= Configuring generic OIDC authentication
 
-OpenID Connect (OIDC) uses the OAuth 2.0 framework.
-It enables third-party applications to verify the identity and obtain basic end-user information.
-The main difference between OIDC and SAML is that SAML has a service provider (SP)-to-IdP trust relationship, whereas OIDC establishes the trust with the channel (HTTPS) that is used to obtain the security token.
-To obtain the credentials needed to set up OIDC with {ControllerName}, see the documentation from the IdP of your choice that has OIDC support.
+OpenID Connect (OIDC) uses the OAuth 2.0 framework. It enables third-party applications to verify the identity and obtain basic end-user information. The main difference between OIDC and SAML is that SAML has a service provider (SP)-to-IdP trust relationship, whereas OIDC establishes the trust with the channel (HTTPS) that is used to obtain the security token. To obtain the credentials needed to set up OIDC with {PlatformNameShort}, see the documentation from the IdP of your choice that has OIDC support.
 
 .Procedure
 
-. From the navigation panel, select {MenuAEAdminSettings}.
-. Select *Generic OIDC settings* from the list of *Authentication* options.
-. Click btn:[Edit] and enter the following information:
+. From the navigation panel, select {MenuAMAuthentication}.
+. Click btn:[Create authentication].
+. Select *Generic OIDC* from the *Authentication type* list and click btn:[Next].
+. Enter a *Name* for this authentication configuration.
+. Enter the following information:
++
+* *OIDC Provider URL*: The URL for your OIDC provider.
 * *OIDC Key*: The client ID from your third-party IdP.
 * *OIDC Secret*: The client secret from your IdP.
-* *OIDC Provider URL*: The URL for your OIDC provider.
-* *Verify OIDC Provider Certificate*: Use the toggle to enable or disable the OIDC provider SSL certificate verification.
-. Click btn:[Save].
 +
+. Optional: Select the HTTP method to be used when requesting an access token from the *Access Token Method* list. The default method is *POST*.
+. Optionally enter information for the following fields using the tooltips provided for instructions and required format:
++
+* *Access Token Method* - The default method is *POST*.
+* *Access Token URL*
+* *Access Token Method*
+* *Authorization URL*
+* *ID Key*
+* *ID Token Issuer*
+* *JWKS URI*
+* *OIDC Public Key*
+* *Revoke Token Method* - The default method is *GET*.
+* *Revoke Token URL*
+* *Response Type*
+* *Token Endpoint Auth Method*
+* *Userinfo URL*
+* *Username Key*
++
+. Use the *Verify OIDC Provider Certificate* to enable or disable the OIDC provider SSL certificate verification.
+. Use the *Redirect* State to enable or disable the state parameter in the redirect URI. It is recommended that this is enabled to prevent Cross Site Request Forgery (CSRF) attacks.
++
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
+. Click btn:[Next].
+
 [NOTE]
 ====
-Team and organization mappings for OIDC are currently not supported.
-The OIDC adapter does authentication only and not authorization.
-It is only capable of authenticating whether this user is who they say they are.
-It does not authorize what this user is enabled to do.
-Configuring generic OIDC creates the UserID appended with an ID or key to differentiate the same user ID originating from two different sources and therefore, considered different users.
-So you get an ID of just the user name and the second is the username-<random number>.
+Team and organization mappings for OIDC are currently not supported. The OIDC adapter does authentication only and not authorization. It is only capable of authenticating whether this user is who they say they are. It does not authorize what this user is enabled to do. Configuring generic OIDC creates the UserID appended with an ID or key to differentiate the same user ID originating from two different sources and therefore, considered different users. So you get an ID of just the user name and the second is the username-<random number>.
 ====
-
-.Verification
-To verify that the authentication is configured correctly, logout of {ControllerName} and the login screen displays the OIDC logo to indicate it as a alternative method of logging into {ControllerName}:
-
-image:ag-configure-auth-oidc-logo.png[OIDClogo]
