--- a/downstream/modules/hub/proc-downloading-signature-public-keys.adoc
+++ b/downstream/modules/hub/proc-downloading-signature-public-keys.adoc
@@ -19,7 +19,7 @@ The Signature Keys dashboard displays a list of multiple keys: collections and c
 
 . Choose one of the following methods to download your public key:
 
-* Select the menu icon and click btn:[Download Key] to download the public key.
+* Select the menu icon labeled btn:[Download Key] to download the public key.
 * Select the public key from the list and click the _Copy to clipboard_ icon.
 * Click the drop-down menu under the *_Public Key_* tab and copy the entire public key block.
 
