AAP-25510A Quick update to intro

--- a/downstream/modules/platform/proc-add-eda-safe-plugin-var.adoc
+++ b/downstream/modules/platform/proc-add-eda-safe-plugin-var.adoc
@@ -3,7 +3,7 @@
 
 = Adding a safe plugin variable to {EDAcontroller}
 
-When using plugins such as redhat.insights_eda or other similar plugins to run rulebook activations in {EDAcontroller}, you must add a safe plugin variable to a directory in {PlatformNameShort}. This would ensure connecton between {EDAcontroller} and the source plugin, and display port mappings correctly. 
+When using redhat.insights_eda or similar plug-ins to run rulebook activations in {EDAcontroller}, you must add a safe plugin variable to a directory in {PlatformNameShort}. This would ensure connecton between {EDAcontroller} and the source plugin, and display port mappings correctly. 
 
 .Procedure
 
