Adding deploying redis section

--- a/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
@@ -23,6 +23,7 @@ If you have the {OperatorPlatform} and some or all of the {PlatformNameShort} co
 include::platform/proc-operator-link-components.adoc[leveloffset=+1]
 include::platform/proc-operator-access-aap.adoc[leveloffset=+1]
 include::platform/proc-operator-deploy-central-config.adoc[leveloffset=+1]
+include::platform/proc-operator-deploy-redis.adoc[leveloffset=+1]
 include::platform/proc-operator-aap-faq.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
