--- a/downstream/titles/aap-operator-installation/master.adoc
+++ b/downstream/titles/aap-operator-installation/master.adoc
@@ -36,6 +36,7 @@ include::platform/assembly-installing-hub-operator.adoc[leveloffset=+1]
 
 // [gmurray] Commenting out this module as covered in assembly-configure-aap-operator.adoc
 // include::platform/assembly-deploy-eda-controller-on-aap-operator.adoc[leveloffset=+1]
+include::platform/platform/proc-operator-deploy-redis.adoc[leveloffset=+1]
 
 include::platform/assembly-using-rhsso-operator-with-automation-hub.adoc[leveloffset=+1]
 
