--- a/downstream/modules/platform/proc-operator-deploy-redis.adoc
+++ b/downstream/modules/platform/proc-operator-deploy-redis.adoc
@@ -1,10 +1,10 @@
 = Deploying clustered Redis on {OperatorPlatform}
 
 When you create an {PlatformNameShort} instance through the {OperatorPlatform}, standalone Redis is assigned by default. 
-To deploy clustered Redis, see the following procedure.
+To deploy clustered Redis, use the following procedure.
 
 //Add a link to the section when ready
-For more information about Redis, refer to Caching and queueing system in the _Planning_ _your_ _installation_ _guide_.
+For more information about Redis, refer to Caching and queueing system in the _Planning your installation_ guide.
 
 .Prerequisites
 * You have installed an {OperatorPlatform} deployment.
@@ -16,7 +16,7 @@ For more information about Redis, refer to Caching and queueing system in the _P
 . Select the *Details* tab. 
 . On the *{PlatformNameShort}* tile click btn:[Create instance].
 .. For existing instances, you can edit the YAML view by clicking the {MoreActionsIcon} icon and then btn:[Edit AnsibleAutomationPlatform].
-.. Edit the *redis_mode* value to "clustered".
+.. Change the *redis_mode* value to "clustered".
 .. Click btn:[Reload], then btn:[Save].
 . Click to expand *Advanced configuration*.
 . For the *Redis Mode* list, select *Cluster*.
