Inputing content for chapter 2

--- a/stories/topics/con-saas-account-management.adoc
+++ b/stories/topics/con-saas-account-management.adoc
@@ -1,5 +1,7 @@
 [id="con-saas-account-management"]
-= Account Management
+= Account management
+
+This section provides an overview of the billing and environment management operations.
 
 include::con-saas-billing.adoc[leveloffset=+1]
 include::con-saas-deployment-self-service.adoc[leveloffset=+1]
