--- a/stories/topics/con-saas-control-plane.adoc
+++ b/stories/topics/con-saas-control-plane.adoc
@@ -1,11 +1,13 @@
 [id="con-saas-control-plane"]
 = Control plane
 
+The {PlatformNameShort} control plane includes the application UIs, APIs, components, and services used for managing automation.Red{nbsp}Hat manages these in Red{nbsp}Hat infrastructure.
 
 include::con-saas-customer-access.adoc[leveloffset=+1]
 include::con-saas-sre-access-and-management.adoc[leveloffset=+1]
 include::con-saas-backup-and-diaster-recovery.adoc[leveloffset=+1]
 include::con-saas-infastructure-monitoring.adoc[leveloffset=+1]
+include::con-saas-application-monitoring-and-customer-audits.adoc[leveloffset=+1]
 include::con-saas-status-notification.adoc[leveloffset=+1]
 include::con-saas-security.adoc[leveloffset=+1]
 include::con-saas-identity-and-access-management.adoc[leveloffset=+2]
