--- a/stories/topics/con-saas-deployment-self-service.adoc
+++ b/stories/topics/con-saas-deployment-self-service.adoc
@@ -1,3 +1,8 @@
 [id="con-saas-deployment-self-service"]
 
 = Deployment-self-service
+
+You can self-service deployments including, but not limited to, the following operations:
+
+* Creating an {PlatformNameShort} on a AWS environment.
+* Deleting an {PlatformNameShort} on a AWS environment.
