--- a/stories/topics/con-saas-dns.adoc
+++ b/stories/topics/con-saas-dns.adoc
@@ -1,3 +1,6 @@
 [id="con-saas-dns"]
 
 = DNS
+
+Execution nodes use the DNS configuration of the host machine when performing DNS queries. 
+You must configure DNS through standard RHEL network configuration practices in order to ensure proper lookup when automation is run.
