--- a/stories/topics/con-saas-execution-plane.adoc
+++ b/stories/topics/con-saas-execution-plane.adoc
@@ -1,8 +1,9 @@
 [id="con-saas-execution-plane"]
 
-= Execution Plane
-
-== Networks with overlapping CIDR blocks
+= Execution plane
+The ability to run jobs on the default or controller execution planes is limited to test and cleanup jobs. 
+You must configure all automation to happen on your execution plane.
+You are provided with 10 Red{nbsp}Hat Enterprise Linux (RHEL) entitlements for running the execution plane as part of the {SaaSonAWSShort} subscription.  Additional RHEL or OpenShift licenses can be purchased separately.
 
 include::con-saas-shape.adoc[leveloffset=+1]
 include::con-saas-networking.adoc[leveloffset=+1]
