--- a/stories/topics/con-saas-infastructure-monitoring.adoc
+++ b/stories/topics/con-saas-infastructure-monitoring.adoc
@@ -1,2 +1,5 @@
 [id="con-saas-infrastructure-monitoring"]
-= Infrastructure Monitoring 
+= Infrastructure monitoring 
+
+Red{nbsp}Hat is responsible for monitoring the control plane. 
+You do not have access to add any additional monitoring to resources that run the control plane.
