--- a/stories/topics/con-saas-regions.adoc
+++ b/stories/topics/con-saas-regions.adoc
@@ -1,3 +1,13 @@
 [id="con-saas-regions"]
 
-= Regions and Availability zones
+= Regions and availability zones
+
+The following regions are currently supported:
+
+* us-east-1
+* us-east-2
+* us-west-2
+* eu-west-2
+* eu-central-1
+
+//{SaaSonAWSShort} regional support will be rolled out to new regions over time with the objective of having regional parity with ROSA HCP multi-region support.For more information on ROSA see the link:https://docs.openshift.com/rosa/rosa_architecture/rosa_policy_service_definition/rosa-service-definition.html#rosa-sdpolicy-account-management_rosa-service-definition[ROSA service definition] documentation.
