--- a/stories/topics/con-saas-responsibilities.adoc
+++ b/stories/topics/con-saas-responsibilities.adoc
@@ -1,2 +1,23 @@
 [id="con-saas-responsibilities"]
 = Responsibilities
+
+|===
+| Feature                                 | Red Hat | Customer
+
+| Control plane infrastructure            | ✓       | ┄
+| Execution plane infrastructure          | ┄       | ✓
+| Control plane deployment                | ✓       | ┄
+| Control plane uptime                    | ✓       | ┄
+| Control plane upgrades                  | ✓       | ┄
+| Control plane backup and restore        | ✓       | ┄
+| Control plane security                  | ✓       | ┄
+| Execution plane (automation mesh) deployment | ┄   | ✓
+| Execution plane uptime                  | ┄       | ✓
+| Execution plane upgrades                | ┄       | ✓
+| Execution plane backup and restore      | ┄       | ✓
+| Execution plane security                | ┄       | ✓
+| Settings and configuration              | ┄       | ✓
+| Automation content                      | ┄       | ✓
+| Application integrations                | ┄       | ✓
+| Identity and access                     | ┄       | ✓
+|===
