--- a/stories/topics/con-saas-status-notification.adoc
+++ b/stories/topics/con-saas-status-notification.adoc
@@ -1,2 +1,4 @@
 [id="con-saas-status-notification"]
 = Status notification
+
+Red{nbsp}Hat communicates the health and status of {SaaSonAWS} clusters through a combination of user interfaces on Red{nbsp}Hat Hybrid Cloud Console, email notifications sent to the email address of the contact that originally deployed the cluster, and any additional contacts you specify.
