--- a/stories/topics/con-saas-support.adoc
+++ b/stories/topics/con-saas-support.adoc
@@ -1,3 +1,9 @@
 [id="con-saas-support"]
 
 = Support
+
+{SaaSonAWS} includes Red{nbsp}Hat Premium Support, which can be accessed by using the link:https://access.redhat.com/support[Red Hat Customer Portal].
+
+See {SaaSonAWS} link:https://access.redhat.com/support/offerings/production/sla[Production Support Terms of Service] for support response times.
+
+AWS support is subject to a customer’s existing support contract with AWS.
