--- a/stories/topics/con-saas-billing.adoc
+++ b/stories/topics/con-saas-billing.adoc
@@ -1,3 +1,9 @@
 [id="con-saas-billing"]
 
 = Billing
+
+{SaaSonAWS} is billed through Amazon Web Services (AWS).
+The offer is priced based on the number of managed active nodes automated and related infrastructure management costs.
+Discount tiers are available for pre-purchasing managed active nodes at the start of a billing cycle.
+
+The service includes a single {PlatformNameShort} deployment and 10 Red Hat Enterprise Linux (RHEL) entitlements that allow you to run your automation execution plane.
