--- a/stories/topics/con-saas-customer-access.adoc
+++ b/stories/topics/con-saas-customer-access.adoc
@@ -1,2 +1,15 @@
 [id="con-saas-customer-access"]
 = Customer access
+
+Your access to the control plane is specific to the {PlatformNameShort} user interfaces and APIs.
+
+During the initial configuration of an {SaaSonAWSShort} deployment, you are provided with the URL of your deployment. 
+You can also access this information after deployment through the Red{nbsp}Hat Hybrid Cloud Console (HCC).
+
+An initial password for the administrator account is provided to the HCC user that performed the initial deployment.
+
+[IMPORTANT]
+====
+Change this password immediately after logging into {PlatformNameShort} for the first time.
+====
+If you require assistance accessing your deployment, you can submit a support request.
