--- a/stories/topics/con-saas-encryption.adoc
+++ b/stories/topics/con-saas-encryption.adoc
@@ -1,2 +1,5 @@
 [id="con-saas-encryption"]
 = Encryption
+
+Data is encrypted at rest in both the database and file system through Red{nbsp}Hat managed encryption keys.
+Data is encrypted in-transit using TLS 1.2 or higher.
