--- a/stories/topics/con-saas-identity-and-access-management.adoc
+++ b/stories/topics/con-saas-identity-and-access-management.adoc
@@ -1,2 +1,10 @@
 [id="con-saas-identity-and-access-management"]
 = Identity and access management
+
+{PlatformNameShort} has a built-in user model that may be used to configure users and RBAC permissions that define user access.
+Red{nbsp}Hat encourages you to configure and use an enterprise identity provider with {PlatformNameShort} to implement multi-factor authentication for users.
+See the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-set-up-enterprise-authentication[Setting up enterprise authentication] section of {PlatformNameShort} documentation for a configuration guide.
+[NOTE]
+====
+Red{nbsp}Hat recommends that at least one local administrator account be retailed with a long and complex password in the event of a break-glass authentication requirement.
+====
