--- a/stories/topics/con-saas-sla.adoc
+++ b/stories/topics/con-saas-sla.adoc
@@ -1,2 +1,4 @@
 [id="con-saas-sla"]
 = Service level agreement
+
+Any service level agreements (SLAs) for the service itself are defined in Appendix 4 (Online Subscription Services) of the link:https://www.redhat.com/en/about/appendices[Red{nbsp}Hat Enterprise Agreement Product Appendices].
