AAP-25515 Updates to the RH AAP credentials setup

--- a/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
+++ b/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
@@ -2,6 +2,6 @@
 
 = {PlatformName} credential
 
-To run your rulebook activations successfully, you must create credentials with the {PlatformName} credential type. Using this credential type provides more seamless authentication without the requirement to create a token.
+The {PlatformName} credential type can connect to {ControllerName} through the use of a username and password or an {ControllerName} URL. After you have created this credential type, it can be attached to a rulebook and used to run rulebook activations.  
 
 include::eda/proc-eda-set-up-rhaap-credential.adoc[leveloffset=+1]
