--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -30,9 +30,9 @@ When you select the credential type, the *Type Details* section is displayed wit
 +
 [NOTE]
 ====
-For {EDAcontroller} 2.5 with {ControllerName} 2.4, use the following example: https://_your_controller_host_
+For {EDAcontroller} 2.5 with {ControllerName} 2.4, use the following example: https://<your_controller_host>
 
-For {PlatformNameShort} {PlatformVers}, use the following example: https://_your_gateway_host_/api/controller/
+For {PlatformNameShort} {PlatformVers}, use the following example: https://<your_gateway_host>/api/controller/
 ====
 . Enter a valid username and password or an Oauth Token. 
 . Click btn:[Create controller token].
