AAP-25515 Final updates to content

--- a/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
+++ b/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
@@ -2,6 +2,6 @@
 
 = {PlatformName} credential
 
-The {PlatformName} credential type can connect to {ControllerName} through the use of a username and password or an {ControllerName} URL. After you have created this credential type, it can be attached to a rulebook and used to run rulebook activations.  
+The {PlatformName} credential type can connect to {ControllerName} through the use of an {ControllerName} URL and a username and password. After you have created this credential type, it can be attached to a rulebook and used to run rulebook activations.  
 
 include::eda/proc-eda-set-up-rhaap-credential.adoc[leveloffset=+1]
