AAP-25515 Updated field names capitalization and bolding in step 6 - peer review

--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -34,7 +34,7 @@ For {EDAcontroller} 2.5 with {ControllerName} 2.4, use the following example: ht
 
 For {PlatformNameShort} {PlatformVers}, use the following example: https://<your_gateway_host>/api/controller/
 ====
-. Enter a valid username and password or an Oauth Token. 
+. Enter a valid *Username* and *Password* or *Oauth Token*. 
 . Click btn:[Create controller token].
 
 After saving the credential, the credentials Details page is displayed. From there or the Credentials list view, you can edit or delete it.
